Make Guava test only (#85)
- Removes Guava from implementation configuration
- Adds Guava to testImplementation configuration
- Replaces Guava usages with alternatives

[patch]

Signed-off-by: Esta Nagy <nagyesta@gmail.com>